--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,45 @@
+buildscript {
+    repositories {
+        maven { url 'http://maven.aliyun.com/repository/public' }
+        maven { url 'http://maven.aliyun.com/repository/central' }
+        maven { url 'http://maven.aliyun.com/repository/jcenter' }
+        maven { url 'http://maven.aliyun.com/repository/google' }
+        maven { url 'http://maven.aliyun.com/repository/spring'}
+        maven { url 'http://maven.aliyun.com/repository/gradle-plugin' }
+    }
+}
+
 plugins {
+    id "com.jfrog.artifactory" version "4.10.0"
     id 'nebula.kotlin' version '1.3.21'
     id 'nebula.project' version '3.4.0'
     id 'nebula.release' version '6.3.0'
     id 'nebula.maven-publish' version '7.0.1'
     id 'nebula.nebula-bintray' version '3.5.2'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.60'
 }
 
 group 'au.com.console'
 
 repositories {
-    jcenter()
+    maven { url 'http://maven.aliyun.com/repository/public' }
+    maven { url 'http://maven.aliyun.com/repository/central' }
+    maven { url 'http://maven.aliyun.com/repository/jcenter' }
+    maven { url 'http://maven.aliyun.com/repository/google' }
+    maven { url 'http://maven.aliyun.com/repository/spring'}
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
-    compile 'org.springframework.data:spring-data-jpa:2.1.6.RELEASE'
+    compile 'org.springframework.data:spring-data-jpa:2.2.1.RELEASE'
     compileOnly 'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final'
-    testCompile 'org.springframework.boot:spring-boot-starter-data-jpa:1.3.5.RELEASE'
-    testCompile 'com.h2database:h2:1.4.191'
-    testCompile 'org.springframework.boot:spring-boot-starter-test:1.3.5.RELEASE'
+    testCompile 'org.springframework.boot:spring-boot-starter-data-jpa:2.2.1.RELEASE'
+    testCompile 'com.h2database:h2:1.4.200'
+    testCompile 'org.springframework.boot:spring-boot-starter-test:2.2.1.RELEASE'
     testCompile 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 tasks.bintrayUpload.dependsOn tasks.check
@@ -47,13 +65,20 @@ bintray {
         userOrg = 'consoleau'
         name = 'kotlin-jpa-specification-dsl'
         licenses = ['Apache-2.0']
-        labels = ['kotlin','spring']
+        labels = ['kotlin', 'spring']
         websiteUrl = "https://github.com/consoleau/${project.name}"
         issueTrackerUrl = "https://github.com/consoleau/${project.name}/issues"
         vcsUrl = "https://github.com/consoleau/${project.name}.git"
     }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = "4.5.1"
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
